trying to fix search
